--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -6,6 +6,61 @@
   </h1>
 </div>
 
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Fandango-chasselat.jpg"><img src="/images/story_dance.png"></a>
+    <h3><%= t('content.story_dance_title') %></h3>
+    <p><%= t('content.story_dance_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Typewriter_(24111292).jpg"><img src="/images/story_copywrong.png"></a>
+    <h3><%= t('content.story_copywrong_title') %></h3>
+    <p><%= t('content.story_copywrong_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Hello_My_Name_Is_(15283079263).jpg"><img src="/images/story_change.png"></a>
+    <h3><%= t('content.story_change_title') %></h3>
+    <p><%= t('content.story_change_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Crayons_de_couleur_multicolores_(19472756278).jpg"><img src="/images/story_principle.png"></a>
+    <h3><%= t('content.story_principle_title') %></h3>
+    <p><%= t('content.story_principle_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:BEOGRAM_1202_(19218616158).jpg"><img src="/images/story_letitgo.png"></a>
+    <h3><%= t('content.story_letitgo_title') %></h3>
+    <p><%= t('content.story_letitgo_body') %></p>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="story">
+    <a href="//commons.wikimedia.org/wiki/File:Book_sale_loot_(4552277923).jpg"><img src="/images/story_bedtime.png"></a>
+    <h3><%= t('content.story_bedtime_title') %></h3>
+    <p><%= t('content.story_bedtime_body') %></p>
+  </div>
+</div>
+
+<div class="clear"></div>
+<br><br>
+
 <!-- 2015 Stories-->
 <div class="col-md-4">
   <div class="story">
@@ -18,7 +73,7 @@
 <div class="col-md-4">
   <div class="story">
     <a href="//commons.wikimedia.org/wiki/Barnstar#/media/File:Original_Barnstar_Hires.png"><img src="/images/story_barnstar.png"></a>
-    <h3id="home-made"><%= t('content.story_barnstar_title') %></h3>
+    <h3 id="home-made"><%= t('content.story_barnstar_title') %></h3>
     <p><%= t('content.story_barnstar_body') %></p>
   </div>
 </div>
