--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -67,6 +67,12 @@
 
 	<hr>
 
+	<a name="administrative_subpoena"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_administrative_subpoena') %></span></h2>
+	<div class="answer"><%= t('faq.a_administrative_subpoena') %></div>
+
+	<hr>
+
 	<a name="search_warrant"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_search_warrant') %></span></h2>
 	<div class="answer"><%= t('faq.a_search_warrant') %></div>
