--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -48,7 +48,7 @@
 <blockquote class="middle">
     <p><%= t('home.quote') %></p>
     <footer>
-      <a href="//en.wikipedia.org/wiki/File:Thomas_Paine_by_Matthew_Pratt,_1785-95.jpg"><img src="/images/quote_paine.png"></a>
+      <a href="//en.wikipedia.org/wiki/Two_Eleven#/media/File:Frank_Ocean_Coachella_2012_3.jpg"><img src="/images/quote_ocean.png"></a>
       <p><%= t('home.cite') %></p>
     </footer>
   </blockquote>
