Fix country name
Change-Id: I77a5fda680d21d34b618dabe46bbe70f369df815

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -90,7 +90,7 @@
 				<td>1</td>
 			</tr>
 			<tr>
-				<td><%= t('graph.korea') %></td>
+				<td><%= t('graph.south_korea') %></td>
 				<td><%= t('graph.military') %></td>
 				<td>1</td>
 			</tr>
