--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="//bits.wikimedia.org/favicon/wmf.ico" />
+		<link rel="shortcut icon" href="//www.wikimedia.org/static/favicon/wmf.ico" />
 		<title><%= current_page.data.title || "Wikimedia Foundation: Transparency Report" %></title>
 
 		<!-- Piwik -->
